# svg-renderer

./: .dockerignore  AGENTS.md  Dockerfile  README.md  app.py  pyproject.toml  renderer.py
.github/workflows/: cd.yml  ci.yml
