[project]
name = "svg-renderer"
version = "0.1.0"
description = "Lightweight SVG-to-PNG rendering microservice powered by Playwright/Chromium"
requires-python = ">=3.12"
dependencies = [
    "quart>=0.20.0",
    "playwright>=1.52.0",
    "loguru>=0.7.3",
    "hypercorn>=0.17.3",
]

[dependency-groups]
dev = [
    "ruff>=0.11.0",
]
